@startuml

class Film {
    -titolo: String
    -regista: String
    -anno: int
    -genere: String
    -voto: int
    -stato: Stato
    (nota: tutti gli attributi
    hanno getter e setter)
}

interface Collezione {
    +add()
    +modifica()
    +remove()
    +search()
    +sort()
    +salva()
    +clear()
    +size()
    +isEmpty()
}

class CollezioneSingleton {
    -films: List<Film>
    +add()
    +modifica()
    +remove()
    +search()
    +sort()
    +salva()
    +clear()
    +size()
    +isEmpty()
}

Collezione <|.. CollezioneSingleton
CollezioneSingleton *-- Film

left to right direction

@enduml